# backup_home

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  README  backup.1  backup.c  backup.cfg  backutils.c  backutils.h  bulogrot.1  bulogrot.c  checkps.c  checkps.h  cleanup.1  cleanup.c  config.h.in  configure  configure.ac  cruft  decruft.1  decruft.c  fileops.c  fileops.h  fileutil.c  fileutil.h  firstrun.h  greputils.c  greputils.h  runutils.c  runutils.h
